# retour-utils

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: e.rs  lua_detour.rs  messageboxw_detour.rs
impl/: CHANGELOG.md  Cargo.toml
impl/src/: crate_refs.rs  expand.rs  fold.rs  helpers.rs  lib.rs  parse.rs  types.rs
src/: error.rs  lib.rs
tests/: progress.rs
tests/build-tests/: different_abis.rs  only_modify_marked.rs  require_module_name.rs  retain_other_items.rs
