[package]
name = "retour-utils"
version = "0.1.1"
authors = ["Mason Ginter <mason@dagint.com>"]
license = "BSD-2-Clause"
description = "Utility crate for creating hooks with `retour`"
documentation = "https://docs.rs/retour-utils"
homepage = "https://github.com/Hpmason/retour-utils"
repository = "https://github.com/Hpmason/retour-utils"
keywords = ["detour", "hook", "function", "redirect", "macros"]
readme = "README.md"
edition = "2021"
autotests = false
resolver = "2"


[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
retour-utils-impl = { path = "impl", version = "0.1.1" }
retour = { version = "0.3.0", features = ["static-detour"] }

[target."cfg(windows)".dependencies]
windows = {version = "0.48", features = ["Win32_System_LibraryLoader", "Win32_Foundation"]}
[target."cfg(windows)".dev-dependencies]
windows = {version = "0.48", features = ["Win32_System_LibraryLoader", "Win32_Foundation", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging"]}

[workspace]
members = ["impl"]